--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,11 @@ a {
   height: 40px;
   background-color: transparent;
   padding-left: 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
 }
 
 .email-input::placeholder {
@@ -517,11 +522,13 @@ a {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  color: #fff;
+  color: color #ffffff;
 }
 
 .email-button {
+  min-width: 165px;
   display: flex;
+  justify-content: center;
   border-radius: 4px;
   padding: 8px 24px;
   width: 165px;
@@ -537,9 +544,12 @@ a {
   color: #fff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  border: none;
 }
 
 .email-icon {
+  margin-left: 16px;
   fill: #fff;
 }
 
@@ -558,6 +568,8 @@ a {
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -572,6 +584,7 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button {
@@ -588,20 +601,22 @@ a {
   justify-content: center;
   cursor: pointer;
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-icon {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover,
-.modal-close-button:focus,
-.modal-close-icon:hover,
-.modal-close-icon:focus {
-  border: none;
+.modal-close-button:focus {
   background-color: #404bbf;
-  fill: #fff;
+  border: none;
+}
+
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon:hover .modal-close-button:focus {
+  fill: #ffffff;
 }
 
 .modal-text {
@@ -619,10 +634,10 @@ a {
   margin-bottom: 8px;
 }
 .modal-label {
+  line-height: 1.17;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
@@ -639,6 +654,7 @@ a {
   padding: 11px 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
 }
 
 .modal-input-info:focus {
@@ -652,10 +668,15 @@ a {
   transform: translateY(-50%);
   fill: none;
   stroke: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-info:focus + .modal-input-icon {
-  stroke: #4d5ae5;
+  fill: #4d5ae5;
+}
+
+.modal-form-field {
+  margin-bottom: 16px;
 }
 
 .modal-field-textarea {
@@ -664,6 +685,14 @@ a {
   border-radius: 4px;
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-field-textarea:focus {
@@ -687,6 +716,7 @@ a {
   border: none;
 }
 .label-checkbox {
+  line-height: 1.17;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -703,6 +733,16 @@ a {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: transparent;
+}
+
+.checkbox:checked + .custom-checkbox {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .agreement-checkbox-icon {
@@ -728,16 +768,13 @@ a {
   color: #fff;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox-button:hover,
-.checkbox-button:focus {
-  background: #404bbf;
+  cursor: pointer;
+  border: none;
 }
 
 .backdrop .is-open {
