--- a/css/styles.css
+++ b/css/styles.css
@@ -535,7 +535,7 @@ a {
   height: 40px;
   background: #4d5ae5;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -606,17 +606,15 @@ a {
 }
 
 .modal-close-button:hover,
-.modal-close-button:focus {
+.modal-close-button:focus + .modal-close-icon:hover,
+.modal-close-icon:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
 
 .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-icon:hover .modal-close-button:focus {
-  fill: #ffffff;
 }
 
 .modal-text {
@@ -633,6 +631,7 @@ a {
 .modal-form-field {
   margin-bottom: 8px;
 }
+
 .modal-label {
   line-height: 1.17;
   font-family: "Roboto", sans-serif;
@@ -646,6 +645,7 @@ a {
 .input-box {
   position: relative;
 }
+
 .modal-input-info {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -673,10 +673,6 @@ a {
 
 .modal-input-info:focus + .modal-input-icon {
   fill: #4d5ae5;
-}
-
-.modal-form-field {
-  margin-bottom: 16px;
 }
 
 .modal-field-textarea {
@@ -725,6 +721,7 @@ a {
   color: #8e8f99;
 }
 .custom-checkbox {
+  line-height: 1.17;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
@@ -739,7 +736,7 @@ a {
   fill: transparent;
 }
 
-.checkbox:checked + .custom-checkbox {
+.checkbox:checked + .custom-checkbox + .agreement-checkbox-icon {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -748,7 +745,6 @@ a {
 .agreement-checkbox-icon {
   fill: #fff;
 }
-
 .privacy-link {
   line-height: 1.33333;
   text-decoration: underline;
