--- a/css/styles.css
+++ b/css/styles.css
@@ -535,7 +535,6 @@ a {
   height: 40px;
   background: #4d5ae5;
   align-items: center;
-  justify-content: center;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -606,11 +605,9 @@ a {
 }
 
 .modal-close-button:hover,
-.modal-close-button:focus + .modal-close-icon:hover,
-.modal-close-icon:focus {
+.modal-close-button:focus {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
 }
 
 .modal-close-icon {
@@ -675,6 +672,10 @@ a {
   fill: #4d5ae5;
 }
 
+.modal-form-field-text {
+  margin-bottom: 16px;
+}
+
 .modal-field-textarea {
   padding: 8px 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -736,15 +737,10 @@ a {
   fill: transparent;
 }
 
-.checkbox:checked + .custom-checkbox + .agreement-checkbox-icon {
-  background-color: #404bbf;
-  border: none;
-  fill: #f4f4fd;
-}
-
 .agreement-checkbox-icon {
   fill: #fff;
 }
+
 .privacy-link {
   line-height: 1.33333;
   text-decoration: underline;
@@ -771,6 +767,12 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   border: none;
+}
+
+.checkbox:checked + .custom-checkbox + .agreement-checkbox-icon {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .backdrop .is-open {
