--- a/css/styles.css
+++ b/css/styles.css
@@ -587,19 +587,19 @@ a {
 }
 
 .modal-close-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  position: absolute;
-  background-color: #e7e9fc;
-  top: 24px;
-  right: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -612,6 +612,11 @@ a {
 
 .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover .modal-close-icon,
+.modal-close-button:focus .modal-close-icon {
+  fill: #ffffff;
 }
 
 .modal-text {
@@ -644,14 +649,14 @@ a {
 }
 
 .modal-input-info {
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
   width: 100%;
   height: 40px;
-  padding: 11px 38px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: transparent;
 }
 
 .modal-input-info:focus {
@@ -663,8 +668,6 @@ a {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  fill: none;
-  stroke: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -712,15 +715,16 @@ a {
   background-color: #404bbf;
   border: none;
 }
+
 .label-checkbox {
+  font-size: 12px;
   line-height: 1.17;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
+
 .custom-checkbox {
   line-height: 1.17;
   border-radius: 2px;
@@ -731,14 +735,17 @@ a {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  fill: transparent;
+  stroke: #f4f4fd;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: transparent;
 }
 
-.agreement-checkbox-icon {
-  fill: #fff;
+.checkbox:checked + .custom-checkbox + .agreement-checkbox-icon {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .privacy-link {
@@ -767,12 +774,6 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   border: none;
-}
-
-.checkbox:checked + .custom-checkbox + .agreement-checkbox-icon {
-  background-color: #404bbf;
-  border: none;
-  fill: #f4f4fd;
 }
 
 .backdrop .is-open {
