--- a/css/styles.css
+++ b/css/styles.css
@@ -611,7 +611,13 @@ a {
 }
 
 .modal-close-icon {
+  stroke: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon:hover,
+.modal-close-icon:focus {
+  fill: #ffffff;
 }
 
 .modal-close-button:hover .modal-close-icon,
@@ -668,6 +674,8 @@ a {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  fill: none;
+  stroke: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
