--- a/css/styles.css
+++ b/css/styles.css
@@ -615,11 +615,6 @@ a {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-icon:hover,
-.modal-close-icon:focus {
-  fill: #ffffff;
-}
-
 .modal-close-button:hover .modal-close-icon,
 .modal-close-button:focus .modal-close-icon {
   fill: #ffffff;
@@ -644,12 +639,13 @@ a {
   line-height: 1.17;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  color: #8e8f99;
   font-size: 12px;
   letter-spacing: 0.04em;
-  color: #8e8f99;
   margin-bottom: 4px;
   display: block;
 }
+
 .input-box {
   position: relative;
 }
@@ -674,8 +670,6 @@ a {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  fill: none;
-  stroke: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -696,7 +690,6 @@ a {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   outline: transparent;
   resize: none;
@@ -719,10 +712,6 @@ a {
 .modal-checkbox {
   margin-bottom: 24px;
 }
-.checkbox:checked + .label-checkbox .custom-checkbox {
-  background-color: #404bbf;
-  border: none;
-}
 
 .label-checkbox {
   font-size: 12px;
@@ -743,16 +732,17 @@ a {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  fill: transparent;
-  stroke: #f4f4fd;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked + .custom-checkbox + .agreement-checkbox-icon {
+.checkbox:checked + .label-checkbox .custom-checkbox {
   background-color: #404bbf;
   border: none;
+}
+
+.agreement-checkbox-icon {
   fill: #f4f4fd;
 }
 
@@ -782,6 +772,11 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   border: none;
+}
+
+.checkbox-button:hover,
+.checkbox-button:focus {
+  background-color: #404bbf;
 }
 
 .backdrop .is-open {
