--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,7 @@ a {
   line-height: 1.17;
   letter-spacing: 0.04em;
   background-color: transparent;
+  color: rgba(46, 47, 66, 0.4);
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -732,6 +733,7 @@ a {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -740,9 +742,6 @@ a {
 .checkbox:checked + .label-checkbox .custom-checkbox {
   background-color: #404bbf;
   border: none;
-}
-
-.agreement-checkbox-icon {
   fill: #f4f4fd;
 }
 
